fixed i18n not updating locale in notification view, fixed scrollbars appearing on new notifications

--- a/src/views/notifications/styles.scss
+++ b/src/views/notifications/styles.scss
@@ -4,6 +4,7 @@ body, a {
 
 body {
     font-size: 14px;
+    overflow: hidden;
 }
 
 hr {
